--- a/Clase Javascript/package.json
+++ b/Clase Javascript/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "eslint": "^8.10.0",
     "prettier": "^2.5.1"
+  },
+  "dependencies": {
+    "es6": "^0.0.7"
   }
 }
